syntax = "proto3";

package helloworld;

option go_package = "api/helloworld/demo/demo;demo";
option java_multiple_files = true;
option java_package = "helloworld";

service Demo {
    rpc CreateDemo (CreateDemoRequest) returns (CreateDemoReply);

}

message CreateDemoRequest {}
message CreateDemoReply {}
